--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,6 @@
-
+body {background: black; font-family: Verdana; text-align: center;}
+h1 {Font-family: Verdana; font-weight: normal; font-size: 50px; color: white; text-align: center;}
+h2 {font-family: Verdana; font-weight:300; font-size: 42px; color: white;}
+p{font-family: Verdana; font-size: 21px; color: gray;}
+.copyright {text-align: right; color: gray;}
+a {color: aquamarine; font-size: 16px; text-align: center;}
